tests/ui/hygiene/fields.stderr
error: type `foo::S` is private
  --> $DIR/fields.rs:13:17
   |
LL |         let s = S { x: 0 };
   |                 ^^^^^^^^^^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `foo::S` is private
  --> $DIR/fields.rs:14:17
   |
LL |         let _ = s.x;
   |                 ^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `T` is private
  --> $DIR/fields.rs:16:17
   |
LL |         let t = T(0);
   |                 ^^^^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `T` is private
  --> $DIR/fields.rs:17:17
   |
LL |         let _ = t.0;
   |                 ^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in the macro `foo::m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

